chore: formatted code

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -78,4 +78,7 @@ const socialImageURL = new URL(ogImage ? ogImage : "/social-card.png", Astro.url
 }
 
 <meta name="generator" content={Astro.generator} />
-<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2711ec7574414866b6d22be9cca01124"}'></script>
+<script
+  defer
+  src="https://static.cloudflareinsights.com/beacon.min.js"
+  data-cf-beacon='{"token": "2711ec7574414866b6d22be9cca01124"}'></script>
