--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,10 +14,23 @@ const meta = {
 
     <h2>Work Experience</h2>
     <ul class="list-inside list-disc">
-<li>As a Software Engineer at GoZayaan, I was involved in migrating over 500,000 lines of code from Vue to NuxtJS, implementing 3 new user flows, and adding more than 20 major features across 5 projects.</li>
-<li>At a Stealth Startup, I developed 3 solutions using a KoaJS backend and PostgreSQL database, launched a lean model canvas generator, and initiated a project using Kotlin/Android.</li>
-<li>During my time as a Web Development Intern at a Design Studio, I published 4 websites with a 2-person team, generating over $1k in revenue.</li>
+      <li>
+        As a Software Engineer at GoZayaan, I was involved in migrating over 500,000 lines of code
+        from Vue to NuxtJS, implementing 3 new user flows, and adding more than 20 major features
+        across 5 projects.
+      </li>
+      <li>
+        At a Stealth Startup, I developed 3 solutions using a KoaJS backend and PostgreSQL database,
+        launched a lean model canvas generator, and initiated a project using Kotlin/Android.
+      </li>
+      <li>
+        During my time as a Web Development Intern at a Design Studio, I published 4 websites with a
+        2-person team, generating over $1k in revenue.
+      </li>
     </ul>
-    <h2>I graduated from BRAC University with a B.S. in Computer Science with a CGPA of 3.91/4.00, and later worked as a tutor for the Computer Architecture course with 150 students.</h2>
+    <h2>
+      I graduated from BRAC University with a B.S. in Computer Science with a CGPA of 3.91/4.00, and
+      later worked as a tutor for the Computer Architecture course with 150 students.
+    </h2>
   </div>
 </PageLayout>
