--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,10 @@ const cactusTech: Array<{ title: string; desc: string; href: string }> = [
   <section>
     <h1 class="title mb-6">Hello World!</h1>
     <p class="mb-4">
-    Hey there, I'm Aryan Rahman! I'm super passionate about using my coding skills to tackle tricky challenges. I love collaborating with others to make a real difference. I'm pretty handy with JavaScript, Python, SQL, Django, Express, VueJS, Postgres, AWS, React, and TypeScript. Let's work together and make some awesome stuff happen!
+      Hey there, I'm Aryan Rahman! I'm super passionate about using my coding skills to tackle
+      tricky challenges. I love collaborating with others to make a real difference. I'm pretty
+      handy with JavaScript, Python, SQL, Django, Express, VueJS, Postgres, AWS, React, and
+      TypeScript. Let's work together and make some awesome stuff happen!
     </p>
     <SocialList />
   </section>
