--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -14,9 +14,9 @@ type Props = {
 }
 
 const { data, readTime, headings, id } = Astro.props
-const { title, description, pubDate, heroImage, tags } = data
+const { title, description, publishDate, heroImage, tags } = data
 
-const articleDate = pubDate.toISOString()
+const articleDate = publishDate.toISOString()
 ---
 
 <BaseLayout
@@ -30,7 +30,7 @@ const articleDate = pubDate.toISOString()
 			<div class='flex flex-col gap-2'>
 				<div class='flex items-center justify-center gap-x-1'>
 					<p class='text-center text-sm text-opacity-50'>
-						Published <FormattedDate date={pubDate} />
+						Published <FormattedDate date={publishDate} />
 					</p>
 					<p class='text-center text-sm text-opacity-50 font-bold'>
 						- {readTime}
@@ -45,23 +45,20 @@ const articleDate = pubDate.toISOString()
 				{tags.map((tag) => <Tag tag={tag} />)}
 			</div>
 		</header>
-
-		<>
-			{
-				heroImage && (
-					<Image
-						src={heroImage}
-						width={1000}
-						height={500}
-						quality={100}
-						format='jpg'
-						loading='eager'
-						class='rounded-md w-full max-h-[300px]  md:max-h-[500px] my-8 object-cover'
-						alt={`img of ${title}`}
-					/>
-				)
-			}
-		</>
+		{
+			heroImage && (
+				<Image
+					src={heroImage}
+					width={1000}
+					height={500}
+					quality={100}
+					format='jpg'
+					loading='eager'
+					class='rounded-md w-full max-h-[300px]  md:max-h-[500px] my-8 object-contain'
+					alt={`img of ${title}`}
+				/>
+			)
+		}
 
 		<hr />
 
