--- a/src/components/icons/Shape.astro
+++ b/src/components/icons/Shape.astro
@@ -1,21 +1,101 @@
 <svg
 	xmlns='http://www.w3.org/2000/svg'
-	width='40'
-	height='40'
-	viewBox='0 0 64 64'
 	version='1.1'
 	xmlns:xlink='http://www.w3.org/1999/xlink'
-	><path
-		id='SvgjsPath3009'
-		d='M4 15.51a1 1 0 0 0 .71-.29L15.22 4.71a1 1 0 1 0-1.42-1.42L3.29 13.8a1 1 0 0 0 0 1.42 1 1 0 0 0 .71.29zm0 11.38a1 1 0 0 0 .71-.29L26.6 4.71a1 1 0 1 0-1.42-1.42L3.29 25.18a1 1 0 0 0 0 1.42 1 1 0 0 0 .71.29zm0 11.36a1 1 0 0 0 .71-.25L38 4.71a1 1 0 1 0-1.42-1.42L3.29 36.54a1 1 0 0 0 0 1.42 1 1 0 0 0 .71.29zm0 11.38a1 1 0 0 0 .71-.29L49.34 4.71a1 1 0 1 0-1.42-1.42L3.29 47.92a1 1 0 0 0 0 1.42 1 1 0 0 0 .71.29zM60.71 3.29a1 1 0 0 0-1.42 0l-56 56a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l56-56a1 1 0 0 0 0-1.42zm-1.42 11.37L14.66 59.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l44.63-44.63a1 1 0 0 0-1.42-1.42zm0 11.34L26 59.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l33.29-33.25A1 1 0 0 0 59.29 26zm0 11.4L37.4 59.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l21.89-21.89a1 1 0 0 0-1.42-1.42zm0 11.38L48.78 59.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0L60.71 50.2a1 1 0 0 0-1.42-1.42z'
-		data-name='Layer 9'
-		fill='url("#SvgjsLinearGradient3010")'></path><defs
-		><linearGradient gradientTransform='rotate(0 0.5 0.5)' id='SvgjsLinearGradient3010'
-			><stop stop-opacity=' 1' stop-color='rgba(125, 81, 146)' offset='0'></stop><stop
-				stop-opacity=' 1'
-				stop-color='rgba(125, 81, 146)'
-				offset='0.48'></stop><stop stop-opacity=' 1' stop-color='rgba(128, 5, 166)' offset='1'
-			></stop></linearGradient
-		></defs
+	viewBox='0 0 700 700'
+	width='50'
+	height='50'
+	><defs
+		><linearGradient
+			gradientTransform='rotate(-150, 0.5, 0.5)'
+			x1='50%'
+			y1='0%'
+			x2='50%'
+			y2='100%'
+			id='gggrain-gradient2'
+			><stop stop-color='hsla(37, 91%, 55%, 1.00)' stop-opacity='1' offset='-0%'></stop><stop
+				stop-color='rgba(255,255,255,0)'
+				stop-opacity='0'
+				offset='100%'></stop></linearGradient
+		><linearGradient
+			gradientTransform='rotate(150, 0.5, 0.5)'
+			x1='50%'
+			y1='0%'
+			x2='50%'
+			y2='100%'
+			id='gggrain-gradient3'
+			><stop stop-color='hsl(227, 100%, 50%)' stop-opacity='1'></stop><stop
+				stop-color='rgba(255,255,255,0)'
+				stop-opacity='0'
+				offset='100%'></stop></linearGradient
+		><filter
+			id='gggrain-filter'
+			x='-20%'
+			y='-20%'
+			width='140%'
+			height='140%'
+			filterUnits='objectBoundingBox'
+			primitiveUnits='userSpaceOnUse'
+			color-interpolation-filters='sRGB'
+		>
+			<feTurbulence
+				type='fractalNoise'
+				baseFrequency='0.73'
+				numOctaves='2'
+				seed='2'
+				stitchTiles='stitch'
+				x='0%'
+				y='0%'
+				width='100%'
+				height='100%'
+				result='turbulence'></feTurbulence>
+			<feColorMatrix
+				type='saturate'
+				values='0'
+				x='0%'
+				y='0%'
+				width='100%'
+				height='100%'
+				in='turbulence'
+				result='colormatrix'></feColorMatrix>
+			<feComponentTransfer
+				x='0%'
+				y='0%'
+				width='100%'
+				height='100%'
+				in='colormatrix'
+				result='componentTransfer'
+			>
+				<feFuncR type='linear' slope='3'></feFuncR>
+				<feFuncG type='linear' slope='3'></feFuncG>
+				<feFuncB type='linear' slope='3'></feFuncB>
+			</feComponentTransfer>
+			<feColorMatrix
+				x='0%'
+				y='0%'
+				width='100%'
+				height='100%'
+				in='componentTransfer'
+				result='colormatrix2'
+				type='matrix'
+				values='1 0 0 0 0
+			0 1 0 0 0
+			0 0 1 0 0
+			0 0 0 19 -11'></feColorMatrix>
+		</filter></defs
+	><g
+		><rect width='100%' height='100%' fill='hsl(0, 100%, 60%)'></rect><rect
+			width='100%'
+			height='100%'
+			fill='url(#gggrain-gradient3)'></rect><rect
+			width='100%'
+			height='100%'
+			fill='url(#gggrain-gradient2)'></rect><rect
+			width='100%'
+			height='100%'
+			fill='transparent'
+			filter='url(#gggrain-filter)'
+			opacity='1'
+			style='mix-blend-mode: soft-light'></rect></g
 	></svg
 >
