--- a/src/components/ToggleTheme.astro
+++ b/src/components/ToggleTheme.astro
@@ -34,11 +34,11 @@ import MoonIcon from '@/components/icons/MoonIcon'
 
 <theme-toggle class='relative h-6 w-6'>
 	<button id='toggle-theme' class='group' aria-label='Toggle Theme'>
-		<span class='absolute left-0 right-0 top-0 opacity-0 group-aria-pressed:opacity-100'>
+		<span class='opacity-0 group-aria-pressed:opacity-100 group-aria-[pressed=false]:hidden'>
 			<SunIcon />
 		</span>
 
-		<span class='absolute left-0 right-0 top-0 opacity-0 group-aria-[pressed=false]:opacity-100'>
+		<span class='opacity-0 group-aria-[pressed=false]:opacity-100 group-aria-pressed:hidden'>
 			<MoonIcon />
 		</span>
 	</button>
