--- a/src/components/ToggleTheme.astro
+++ b/src/components/ToggleTheme.astro
@@ -32,7 +32,7 @@ import MoonIcon from '@/components/icons/MoonIcon'
 	}
 </script>
 
-<theme-toggle class='relative h-6 w-6'>
+<theme-toggle class='flex justify-center items-center relative h-6 w-6'>
 	<button id='toggle-theme' class='group' aria-label='Toggle Theme'>
 		<span class='opacity-0 group-aria-pressed:opacity-100 group-aria-[pressed=false]:hidden'>
 			<SunIcon />
