--- a/src/pages/category/[category]/[page].astro
+++ b/src/pages/category/[category]/[page].astro
@@ -52,6 +52,6 @@ const posts = page.data
 		)
 	}
 	<ListCategories activeCategory={params.category} />
-	<ListPosts posts={posts} />
+	<ListPosts posts={posts} FirstBig={true} activeCategory={params.category} />
 	<Pagination page={page} />
 </BaseLayout>
