--- a/src/pages/category/[category]/[page].astro
+++ b/src/pages/category/[category]/[page].astro
@@ -3,27 +3,29 @@ import BaseLayout from '@/layouts/BaseLayout'
 import ListPosts from '@/components/ListPosts'
 import ListCategories from '@/components/ListCategories'
 import TitlePage from '@/components/TitlePage'
-import { sluglify, unsluglify, getCategories, getPosts } from '@/utils'
+import { sluglify, unsluglify, getCategories, filterPostsByCategory } from '@/utils'
 import { siteConfig } from '@/data/site.config'
 import Pagination from '@/components/Pagination'
 
 export async function getStaticPaths({ paginate }: any) {
 	const categories = await getCategories()
-	const allPosts = await getPosts()
 
-	return categories.flatMap((category: string) => {
-		const unsluglifyNameCategory = unsluglify(category!.toLowerCase())
-		const filteredPosts = allPosts.filter(
-			(post) => post.data.category.toLowerCase() === unsluglifyNameCategory
+	const paths = []
+	for (const category of categories as string[]) {
+		const unsluglifyNameCategory = unsluglify(category.toLowerCase())
+		const filteredPosts = await filterPostsByCategory(unsluglifyNameCategory)
+
+		paths.push(
+			...paginate(filteredPosts, {
+				params: {
+					category: sluglify(category.toLowerCase())
+				},
+				pageSize: siteConfig.paginationSize
+			})
 		)
+	}
 
-		return paginate(filteredPosts, {
-			params: {
-				category: sluglify(category.toLowerCase())
-			},
-			pageSize: siteConfig.paginationSize
-		})
-	})
+	return paths
 }
 const params = Astro.params
 const { page } = Astro.props
