--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,17 +2,30 @@
 import HeaderLink from '@/components/HeaderLink'
 import TwitterIcon from '@/components/icons/TwitterIcon'
 import GithubIcon from '@/components/icons/GithubIcon'
+import EmailIcon from '@/components/icons/EmailIcon'
+import LinkedinIcon from '@/components/icons/linkedinIcon'
 import MenuIcon from './icons/MenuIcon.astro'
 import Search from '@/components/Search'
 import TagIcon from './icons/TagIcon.astro'
 import ToggleTheme from './ToggleTheme.astro'
+import Contacts from '@/components/Contacts'
 
 // ADD YOUR SOCIAL NETWORKS HERE
 const SOCIALNETWORKS = [
 	{
+		name: 'Email',
+		url: 'mailto:rahman.aryan07@gmail.com',
+		icon: EmailIcon
+	},
+	{
 		name: 'Github',
 		url: 'https://github.com/aryan3212',
 		icon: GithubIcon
+	},
+	{
+		name: 'LinkedIn',
+		url: 'https://www.linkedin.com/in/aryanrahman3212/',
+		icon: LinkedinIcon
 	},
 
 	{
@@ -44,14 +57,19 @@ const SOCIALNETWORKS = [
 				</HeaderLink>
 			</div>
 
-			<div class='flex justify-center items-center md:justify-end gap-3 md:p-0'>
-				{
-					SOCIALNETWORKS.map((network) => (
-						<HeaderLink class='' href={network.url} target='_blank' aria-label={network.name}>
-							<span>{<network.icon />} </span>
-						</HeaderLink>
-					))
-				}
+			<div class='flex flex-col gap-3 md:flex-row md:items-center md:justify-end md:gap-6 md:p-0'>
+				<div class='flex justify-center items-center md:justify-end gap-3'>
+					{
+						SOCIALNETWORKS.map((network) => (
+							<HeaderLink class='' href={network.url} target='_blank' aria-label={network.name}>
+								<span>{<network.icon />} </span>
+							</HeaderLink>
+						))
+					}
+				</div>
+				<div class='md:hidden'>
+					<Contacts />
+				</div>
 			</div>
 		</nav>
 	</div>
