--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,39 +1,10 @@
 ---
 import HeaderLink from '@/components/HeaderLink'
-import TwitterIcon from '@/components/icons/TwitterIcon'
-import GithubIcon from '@/components/icons/GithubIcon'
-import EmailIcon from '@/components/icons/EmailIcon'
-import LinkedinIcon from '@/components/icons/linkedinIcon'
 import MenuIcon from './icons/MenuIcon.astro'
 import Search from '@/components/Search'
 import TagIcon from './icons/TagIcon.astro'
 import ToggleTheme from './ToggleTheme.astro'
 import Contacts from '@/components/Contacts'
-
-// ADD YOUR SOCIAL NETWORKS HERE
-const SOCIALNETWORKS = [
-	{
-		name: 'Email',
-		url: 'mailto:rahman.aryan07@gmail.com',
-		icon: EmailIcon
-	},
-	{
-		name: 'Github',
-		url: 'https://github.com/aryan3212',
-		icon: GithubIcon
-	},
-	{
-		name: 'LinkedIn',
-		url: 'https://www.linkedin.com/in/aryanrahman3212/',
-		icon: LinkedinIcon
-	},
-
-	{
-		name: 'X/Twitter',
-		url: 'https://x.com/aryantwitting',
-		icon: TwitterIcon
-	}
-]
 ---
 
 <header class='relative flex items-center h-12 font-semibold'>
@@ -44,7 +15,7 @@ const SOCIALNETWORKS = [
 	<ToggleTheme />
 	<div
 		id='astro-header-drawer'
-		class='shadow rounded-l-lg md:bg-transparent dark:md:bg-transparent bg-white dark:bg-[#0a0910] md:shadow-none md:rounded-none md:border-none md:h-auto md:static absolute transition-transform duration-300 ease-in translate-x-96 md:translate-x-0 top-12 -right-5 pl-4 pt-6 pb-4 md:p-0 h-[200px] w-[200px] z-50'
+		class='shadow rounded-l-lg md:bg-transparent dark:md:bg-transparent bg-white dark:bg-[#0a0910] md:shadow-none md:rounded-none md:border-none md:h-auto md:static absolute transition-transform duration-300 ease-in translate-x-96 md:translate-x-0 top-12 -right-5 pl-4 pt-6 pb-4 md:p-0 w-[280px] md:w-auto z-50'
 	>
 		<nav
 			class='flex h-full flex-col justify-between gap-12 text-left md:flex-row md:w-full md:gap-5'
@@ -58,18 +29,35 @@ const SOCIALNETWORKS = [
 			</div>
 
 			<div class='flex flex-col gap-3 md:flex-row md:items-center md:justify-end md:gap-6 md:p-0'>
-				<div class='flex justify-center items-center md:justify-end gap-3'>
-					{
-						SOCIALNETWORKS.map((network) => (
-							<HeaderLink class='' href={network.url} target='_blank' aria-label={network.name}>
-								<span>{<network.icon />} </span>
-							</HeaderLink>
-						))
-					}
+				<div class='hidden md:flex items-center gap-4 text-sm font-normal'>
+					<span class='font-mono text-opacity-80'>rahman.aryan07@gmail.com</span>
+					<span class='text-opacity-40'>·</span>
+					<a
+						href='https://github.com/aryan3212'
+						target='_blank'
+						rel='noopener noreferrer'
+						class='underline underline-offset-4 text-opacity-80 hover:text-opacity-100'
+					>
+						GitHub
+					</a>
+					<a
+						href='https://www.linkedin.com/in/aryanrahman3212/'
+						target='_blank'
+						rel='noopener noreferrer'
+						class='underline underline-offset-4 text-opacity-80 hover:text-opacity-100'
+					>
+						LinkedIn
+					</a>
+					<a
+						href='https://x.com/aryantwitting'
+						target='_blank'
+						rel='noopener noreferrer'
+						class='underline underline-offset-4 text-opacity-80 hover:text-opacity-100'
+					>
+						X
+					</a>
 				</div>
-				<div class='md:hidden'>
-					<Contacts />
-				</div>
+				<div class='md:hidden'><Contacts /></div>
 			</div>
 		</nav>
 	</div>
