--- a/src/components/ListPosts.astro
+++ b/src/components/ListPosts.astro
@@ -10,12 +10,13 @@ type Props = {
 }
 
 const { posts, FirstBig = false, activeCategory } = Astro.props
+const isFirstBig = FirstBig && activeCategory?.toLowerCase() !== 'all'
 ---
 
 <section
 	class={cn(
 		`grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3  gap-8 mt-3`,
-		FirstBig && `md:[&>*:first-child]:col-span-2`
+		isFirstBig && `md:[&>*:first-child]:col-span-2`
 	)}
 >
 	{
